--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,42 +1,90 @@
-.jumbotron  {
-    padding-top: 180px;
-    margin-bottom: 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-image: url("../img/KerbanCurve.png");
-    background-size: cover;
-    color: ghostwhite;
-    opacity: .95;
-}
+body {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    color: #5a5a5a;
+  }
 
-@media screen and (max-width: 565px) {
-    
-    .jumbotron {
-        background-size: fill;
-    }
-}
+  .carousel {
+    margin-bottom: 4rem;
+  }
 
-@media screen and (min-width: 1000px) {
-    
-    .jumbotron {
-        background-size: fill;
-    }
-}
+  .carousel-caption {
+    bottom: 3rem;
+    z-index: 10;
+  }
+  
+  .carousel-item {
+    height: 32rem;
+  }
 
-.container {
-    align-content: center;
-}
-
-#bio-cards > .row > .card {
-    margin: 5px;
-}
-
-#portals > .row > .btn {
-    margin: 5px;
-}
-
-#portals {
-}
-
-footer {
+  .carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
+  }
+  
+  .breaking .col-lg-4 {
+    margin-bottom: 1.5rem;
     text-align: center;
+  }
+  .breaking h2 {
+    font-weight: 400;
+  }
+  .breaking .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+  }
+  
+  /* Featurettes
+  ------------------------- */
+  
+  .articles-divider {
+    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  }
+  
+  /* Thin out the marketing headings */
+  .articles-heading {
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -.05rem;
+  }
+  
+  
+  /* RESPONSIVE CSS
+  -------------------------------------------------- */
+  
+  @media (min-width: 40em) {
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+      margin-bottom: 1.25rem;
+      font-size: 1.25rem;
+      line-height: 1.4;
+    }
+  
+    .articles-heading {
+      font-size: 50px;
+    }
+  }
+  
+  @media (min-width: 62em) {
+    .articles-heading {
+      margin-top: 7rem;
+    }
+  }
+
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    }
+
+    @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
 }
