--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,21 @@
+.article-image1{
+    width: 500px;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-image: url(https://media.istockphoto.com/photos/shot-of-a-squad-of-soldiers-running-forward-and-atacking-enemy-during-picture-id814367472?k=6&m=814367472&s=612x612&w=0&h=bXFRgEqu8mHSy7fMv8uRVbjfYJKRAR24PRfUF09zrmk=);
+}
+.article-image2{
+
+    background-repeat: no-repeat;
+    background-image: url(https://media.gettyimages.com/photos/lion-in-high-grass-picture-id494856046?s=612x612);
+}
+
+.article-image3{
+
+    background-repeat: no-repeat;
+    background-image: url(https://asset.barrons.com/public/resources/images/ON-CB801_chip_B620_20170405183838.jpg)
+}
+
 .gb-primary.btn {
     border-width: 1px;
     border-color: rgba(104, 112, 226, .09);
